[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycomment"
description = "with repr value as comment"
readme = "README.md"
authors = [
    { name = "podhmo", email = "ababjam61+github@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
# Version is loaded dynamically from pycomment/__version__.py
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/podhmo/pycomment"
Repository = "https://github.com/podhmo/pycomment"

[project.scripts]
pycomment = "pycomment.__main__:main"

[tool.hatch.version]
path = "pycomment/__version__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "numpy", # For examples
  "black",
  "flake8",
]

[tool.hatch.envs.default.scripts]
# Run tests
test = "pytest"

# Format code with black
format = "black pycomment"

# Lint code with flake8
lint = "flake8 pycomment --ignore W503,E203,E501"

# Run all CI checks: test, format check, and lint
ci = [
  "test",
  "format --check",
  "lint",
]