[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycomment"
description = "with repr value as comment"
readme = "README.md"
authors = [
    { name = "podhmo", email = "ababjam61+github@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
# Version is loaded dynamically from pycomment/__version__.py
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/podhmo/pycomment"
Repository = "https://github.com/podhmo/pycomment"

[project.scripts]
pycomment = "pycomment.__main__:main"

[tool.hatch.version]
path = "pycomment/__version__.py"

# Default environment for `hatch shell`
[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "numpy",
  "black",
  "flake8",
]

# Default tests options for pytest
[tool.hatch.envs.hatch-test]
default-args = ["pycomment/tests"]


# Scripts for the default environment, runnable with `hatch run <script>`
[tool.hatch.envs.default.scripts]
# Format code using black
format = "black pycomment pycomment/tests"

# Lint code using flake8
lint = "flake8 pycomment pycomment/tests --ignore W503,E203,E501"

# Run all CI checks: matrix tests, format check, and lint
ci = [
  "hatch test",
  "hatch run format --check",
  "hatch run lint",
]

# Environment for `hatch test`
[tool.hatch.envs.test]
dependencies = [
  "pytest",
]

# Define a testing matrix for all supported Python versions
[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

